# backer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: demo.yml  public-api.yml  static.yml
examples/demo-site/: Cargo.toml  index.html
examples/demo-site/assets/: sw.js
examples/demo-site/src/: app.rs  main.rs
examples/egui-case-study/: Cargo.toml  README.md
examples/egui-case-study/src/: main.rs
examples/egui-example/: Cargo.toml
examples/egui-example/src/: main.rs
examples/iced-example/: Cargo.toml
examples/iced-example/src/: main.rs
examples/layouts/: Cargo.toml
examples/layouts/src/: main.rs
examples/macroquad-example/src/: main.rs
src/: anynode.rs  clone.rs  constraints.rs  debug.rs  drawable.rs  layout.rs  layout_tests.rs  lib.rs  models.rs  modifiers.rs  node.rs  node_cache.rs  nodes.rs  subtree.rs  traits.rs  transitions.rs
src/tests/: attach_tests.rs  dynamic_tests.rs  layout_tests.rs  mod.rs  scope_tests.rs  sequence_tests.rs
src/traits/: drawable.rs  mod.rs  nodetrait.rs  scopable.rs  scopable_option.rs
