[package]
name = "backer"
version = "0.4.1"
edition = "2021"
description = "A library for straight-forward UI layout."
repository = "https://github.com/ejjonny/backer"
license = "MIT"
keywords = ["UI", "layout"]
authors = ["ejjonny"]

[lib]
crate-type = ["lib"]

[[example]]
name = "macroquad-example"
path = "examples/macroquad-example/src/main.rs"

[[example]]
name = "egui-example"
path = "examples/egui-example/src/main.rs"


[dev-dependencies]
macroquad = "0.4.13"
egui = "0.28.1"
eframe = "0.28.1"
