[package]
name = "backer"
version = "0.11.1"
edition = "2021"
description = "A library for straight-forward UI layout."
repository = "https://github.com/ejjonny/backer"
license = "MIT"
keywords = ["UI", "layout"]
authors = ["ejjonny"]

[lib]
crate-type = ["lib"]

[features]
# default = []
default = ["transitions"]
transitions = ["dep:lilt"]

[[example]]
name = "macroquad-example"
path = "examples/macroquad-example/src/main.rs"

[[example]]
name = "egui-example"
path = "examples/egui-example/src/main.rs"

[[example]]
name = "egui-case-study"
path = "examples/egui-case-study/src/main.rs"

[dev-dependencies]
macroquad = "0.4.13"
egui = "0.28.1"
eframe = "0.28.1"
egui_extras = { version = "0.28.1", features = ["default", "image"] }

[dependencies]
lilt = { version = "0.7.0", optional = true }
